# robot_kinetics_pkgs

./: .kinetic_depends.rosinstall  .travis.yml  README.md
gazebo_robot_kinetics/: CMakeLists.txt  package.xml
gazebo_robot_kinetics/launch/: test.launch
robot_kinetics/: CMakeLists.txt  package.xml
robot_kinetics/config/: wam_v_config.yaml
robot_kinetics/include/: fake_cog_publisher.h
robot_kinetics/launch/: fake_cog_publisher.launch
robot_kinetics/src/: fake_cog_publisher.cpp  fake_cog_publisher_node.cpp
robot_kinetics_pkgs/: CMakeLists.txt  package.xml
