<?xml version="1.0"?>
<package format="2">
  <name>gazebo_robot_kinetics</name>
  <version>0.0.0</version>
  <description>The gazebo_robot_kinetics package</description>

  <maintainer email="ouxt-polaris@example.com">OUXT-Polaris</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robot_kinetics_pkgs</url>
  <url type="bugtracker">http://github.com/OUXT-Polaris/robot_kinetics_pkgs/issues</url>

  <author email="masaya@example.com">Masaya Kataoka</author>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>

</package>
