<?xml version="1.0"?>
<package format="2">
  <name>robot_kinetics</name>
  <version>0.1.0</version>
  <description>The robot_kinetics package</description>

  <maintainer email="ouxt-polaris@example.com">OUXT-Polaris</maintainer>

  <license>GPL</license>

  <url type="repository">http://github.com/OUXT-Polaris/robot_kinetics_pkgs</url>
  <url type="bugtracker">http://github.com/OUXT-Polaris/robot_kinetics_pkgs/issues</url>

  <author email="masaya@example.com">Masaya Kataoka</author>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>roslib</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>message_generation</depend>

  <exec_depend>nao_gazebo_plugin</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_robot_kinetics</exec_depend>

</package>
